ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dieppe
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: traefik-https-redirect@kubernetescrd

spec:
  tls:
    - hosts:
        - pkg.fogo.sh
      secretName: pkg-fogo-sh
  rules:
    - host: pkg.fogo.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dieppe
                port:
                  name: http
